# AutomatedSARShipDetection

C++/CFAR/: Makefile
C++/CFAR/lib/include/: AnnotationItem.h  ImageMdiSubWindow.h  MarkPoint.h  View.h  cpl_config.h  cpl_conv.h  cpl_error.h  cpl_multiproc.h  gdal_alg.h  gdal_alg_priv.h  gdal_priv.h  gdalwarper.h  geo_config.h  ossimQtSingleImageWindow.h  ui_About.h  ui_BandSelectorEditor.h  ui_BrightnessContrastEditor.h  ui_HsiRemapperEditor.h  ui_MainWindow.h
C++/CFAR/lib/include/geos/: platform.h
C++/CFAR/lib/include/oms/: DataInfo.h  ImageModel.h  ImageStager.h  ImageUtil.h  Util.h
C++/CFAR/lib/include/ossim/base/: ossimGzStream.h  ossimVisitor.h
C++/CFAR/lib/include/ossim/plugin/: .ossimPluginLibrary.h.kate-swp
C++/CFAR/lib/include/ossimGui/: DataManager.h  GlWidget.h  MetricOverlay.h  MultiImageDialog.h  RegPoint.h  RegistrationOverlay.h
C++/CFAR/lib/include/ossim_plugins/gdal/: ossimGdalOgrVectorAnnotation.cpp  ossimGdalProjectionFactory.h  ossimGdalTileSource.h  ossimShapeFile.h
C++/CFAR/lib/include/ossim_plugins/geopdf/: CMakeLists.txt  ossimGeoPdfPluginInit.cpp  ossimGeoPdfReader.cpp
C++/CFAR/lib/include/ossim_plugins/hdf/: ossimHdf4Reader.cpp  ossimHdf4SubDataset.h  ossimHdf5Reader.cpp
C++/CFAR/lib/include/ossim_plugins/kakadu/: ossimJpipProjectionFactory.h  ossimKakaduCommon.cpp  ossimKakaduCompressor.cpp  ossimKakaduCompressor.h  ossimKakaduJ2kReader.cpp  ossimKakaduJp2Writer.cpp  ossimKakaduJpipHandler.h  ossimKakaduJpipHandlerFactory.h  ossimKakaduJpipImageGeometryFactory.h  ossimKakaduNitfOverviewBuilder.cpp  ossimKakaduNitfOverviewBuilder.h  ossimKakaduNitfReader.cpp  ossimKakaduNitfReader.h  ossimKakaduWriterFactory.cpp
C++/CFAR/lib/include/ossim_plugins/kmlsuperoverlay/: CMakeLists.txt
C++/CFAR/lib/include/ossim_plugins/las/: ossimLasPointRecordInterface.h  ossimLasReader.h
C++/CFAR/lib/include/ossim_plugins/liblas/: CMakeLists.txt  ossimLibLasReader.h
C++/CFAR/lib/include/ossim_plugins/libraw/: CMakeLists.txt
C++/CFAR/lib/include/ossim_plugins/mrsid/: CMakeLists.txt  ossimMrSidPluginInit.cpp  ossimMrSidReader.cpp
C++/CFAR/lib/include/vrt/: vrtdataset.h
C++/CFAR2/: driver.cpp
C++/CFAR2/src/: ossimCFARFilter.cpp  ossimGlobalFilter.cpp  ossimGlobalFilter.h  ossimSDFilter.h  ossimSimpleFilter.cpp  ossimWaveletFilter.cpp
trunk/AutomatedSARShipDetection/C++/CFAR/: README  driver  driver.cpp
trunk/AutomatedSARShipDetection/C++/CFAR/lib/include/ossim_plugins/hdf/: CMakeLists.txt  ossimHdf4Reader.h  ossimHdf5SubDataset.cpp  ossimHdf5SubDataset.h  ossimHdfGridModel.cpp  ossimHdfGridModel.h
trunk/AutomatedSARShipDetection/C++/CFAR/lib/include/ossim_plugins/ndf/: CMakeLists.txt
trunk/AutomatedSARShipDetection/C++/CFAR/lib/include/ossim_plugins/ossim/: CMakeLists.txt  ossimPleiadesDimapSupportData.cpp  ossimPleiadesModel.h
trunk/AutomatedSARShipDetection/C++/CFAR/src/: ossimCFARFilter.h
trunk/AutomatedSARShipDetection/C++/CFAR2/: 1.txt  Makefile  driver
trunk/AutomatedSARShipDetection/C++/CFAR2/src/: gdalprocess.cpp  gdalprocess.h  ossimSDFilter.cpp  ossimSimpleFilter.h  ossimWaveletFilter.h
trunk/AutomatedSARShipDetection/MATLAB/CFAR/: avgRegionImage.cpp
(+84 files in other folders)
